// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BaseDataAdapter > inferSqlTypeFromItems > inferSqlTypeFromItems work correctly for dialect=aztable 1`] = `
[
  {
    "name": "cd",
    "nested": false,
    "propertyPath": [
      "cd",
    ],
    "type": "string",
  },
  {
    "name": "cb",
    "nested": false,
    "propertyPath": [
      "cb",
    ],
    "type": "float",
  },
  {
    "name": "cc",
    "nested": false,
    "propertyPath": [
      "cc",
    ],
    "type": "boolean",
  },
  {
    "name": "ca",
    "nested": false,
    "propertyPath": [
      "ca",
    ],
    "type": "integer",
  },
  {
    "name": "n/nc/nc2",
    "nested": true,
    "propertyPath": [
      "n",
      "nc",
      "nc2",
    ],
    "type": "boolean",
  },
  {
    "name": "n/nc/nc1",
    "nested": true,
    "propertyPath": [
      "n",
      "nc",
      "nc1",
    ],
    "type": "integer",
  },
  {
    "name": "n/nb",
    "nested": true,
    "propertyPath": [
      "n",
      "nb",
    ],
    "type": "integer",
  },
  {
    "name": "n/na",
    "nested": true,
    "propertyPath": [
      "n",
      "na",
    ],
    "type": "string",
  },
]
`;

exports[`BaseDataAdapter > inferSqlTypeFromItems > inferSqlTypeFromItems work correctly for dialect=cassandra 1`] = `
[
  {
    "name": "cd",
    "nested": false,
    "propertyPath": [
      "cd",
    ],
    "type": "TEXT",
  },
  {
    "name": "cb",
    "nested": false,
    "propertyPath": [
      "cb",
    ],
    "type": "FLOAT",
  },
  {
    "name": "cc",
    "nested": false,
    "propertyPath": [
      "cc",
    ],
    "type": "BOOLEAN",
  },
  {
    "name": "ca",
    "nested": false,
    "propertyPath": [
      "ca",
    ],
    "type": "INT",
  },
  {
    "name": "n/nc/nc2",
    "nested": true,
    "propertyPath": [
      "n",
      "nc",
      "nc2",
    ],
    "type": "BOOLEAN",
  },
  {
    "name": "n/nc/nc1",
    "nested": true,
    "propertyPath": [
      "n",
      "nc",
      "nc1",
    ],
    "type": "INT",
  },
  {
    "name": "n/nb",
    "nested": true,
    "propertyPath": [
      "n",
      "nb",
    ],
    "type": "INT",
  },
  {
    "name": "n/na",
    "nested": true,
    "propertyPath": [
      "n",
      "na",
    ],
    "type": "TEXT",
  },
]
`;

exports[`BaseDataAdapter > inferSqlTypeFromItems > inferSqlTypeFromItems work correctly for dialect=cosmosdb 1`] = `
[
  {
    "name": "cd",
    "nested": false,
    "propertyPath": [
      "cd",
    ],
    "type": "string",
  },
  {
    "name": "cb",
    "nested": false,
    "propertyPath": [
      "cb",
    ],
    "type": "float",
  },
  {
    "name": "cc",
    "nested": false,
    "propertyPath": [
      "cc",
    ],
    "type": "boolean",
  },
  {
    "name": "ca",
    "nested": false,
    "propertyPath": [
      "ca",
    ],
    "type": "integer",
  },
  {
    "name": "n/nc/nc2",
    "nested": true,
    "propertyPath": [
      "n",
      "nc",
      "nc2",
    ],
    "type": "boolean",
  },
  {
    "name": "n/nc/nc1",
    "nested": true,
    "propertyPath": [
      "n",
      "nc",
      "nc1",
    ],
    "type": "integer",
  },
  {
    "name": "n/nb",
    "nested": true,
    "propertyPath": [
      "n",
      "nb",
    ],
    "type": "integer",
  },
  {
    "name": "n/na",
    "nested": true,
    "propertyPath": [
      "n",
      "na",
    ],
    "type": "string",
  },
]
`;

exports[`BaseDataAdapter > inferSqlTypeFromItems > inferSqlTypeFromItems work correctly for dialect=mariadb 1`] = `
[
  {
    "name": "cd",
    "nested": false,
    "propertyPath": [
      "cd",
    ],
    "type": "TEXT",
  },
  {
    "name": "cb",
    "nested": false,
    "propertyPath": [
      "cb",
    ],
    "type": "FLOAT",
  },
  {
    "name": "cc",
    "nested": false,
    "propertyPath": [
      "cc",
    ],
    "type": "BOOLEAN",
  },
  {
    "name": "ca",
    "nested": false,
    "propertyPath": [
      "ca",
    ],
    "type": "INTEGER",
  },
  {
    "name": "n/nc/nc2",
    "nested": true,
    "propertyPath": [
      "n",
      "nc",
      "nc2",
    ],
    "type": "BOOLEAN",
  },
  {
    "name": "n/nc/nc1",
    "nested": true,
    "propertyPath": [
      "n",
      "nc",
      "nc1",
    ],
    "type": "INTEGER",
  },
  {
    "name": "n/nb",
    "nested": true,
    "propertyPath": [
      "n",
      "nb",
    ],
    "type": "INTEGER",
  },
  {
    "name": "n/na",
    "nested": true,
    "propertyPath": [
      "n",
      "na",
    ],
    "type": "TEXT",
  },
]
`;

exports[`BaseDataAdapter > inferSqlTypeFromItems > inferSqlTypeFromItems work correctly for dialect=mongodb 1`] = `
[
  {
    "name": "cd",
    "nested": false,
    "propertyPath": [
      "cd",
    ],
    "type": "string",
  },
  {
    "name": "cb",
    "nested": false,
    "propertyPath": [
      "cb",
    ],
    "type": "float",
  },
  {
    "name": "cc",
    "nested": false,
    "propertyPath": [
      "cc",
    ],
    "type": "boolean",
  },
  {
    "name": "ca",
    "nested": false,
    "propertyPath": [
      "ca",
    ],
    "type": "integer",
  },
  {
    "name": "n/nc/nc2",
    "nested": true,
    "propertyPath": [
      "n",
      "nc",
      "nc2",
    ],
    "type": "boolean",
  },
  {
    "name": "n/nc/nc1",
    "nested": true,
    "propertyPath": [
      "n",
      "nc",
      "nc1",
    ],
    "type": "integer",
  },
  {
    "name": "n/nb",
    "nested": true,
    "propertyPath": [
      "n",
      "nb",
    ],
    "type": "integer",
  },
  {
    "name": "n/na",
    "nested": true,
    "propertyPath": [
      "n",
      "na",
    ],
    "type": "string",
  },
]
`;

exports[`BaseDataAdapter > inferSqlTypeFromItems > inferSqlTypeFromItems work correctly for dialect=mssql 1`] = `
[
  {
    "name": "cd",
    "nested": false,
    "propertyPath": [
      "cd",
    ],
    "type": "TEXT",
  },
  {
    "name": "cb",
    "nested": false,
    "propertyPath": [
      "cb",
    ],
    "type": "FLOAT",
  },
  {
    "name": "cc",
    "nested": false,
    "propertyPath": [
      "cc",
    ],
    "type": "BIT",
  },
  {
    "name": "ca",
    "nested": false,
    "propertyPath": [
      "ca",
    ],
    "type": "INTEGER",
  },
  {
    "name": "n/nc/nc2",
    "nested": true,
    "propertyPath": [
      "n",
      "nc",
      "nc2",
    ],
    "type": "BIT",
  },
  {
    "name": "n/nc/nc1",
    "nested": true,
    "propertyPath": [
      "n",
      "nc",
      "nc1",
    ],
    "type": "INTEGER",
  },
  {
    "name": "n/nb",
    "nested": true,
    "propertyPath": [
      "n",
      "nb",
    ],
    "type": "INTEGER",
  },
  {
    "name": "n/na",
    "nested": true,
    "propertyPath": [
      "n",
      "na",
    ],
    "type": "TEXT",
  },
]
`;

exports[`BaseDataAdapter > inferSqlTypeFromItems > inferSqlTypeFromItems work correctly for dialect=mysql 1`] = `
[
  {
    "name": "cd",
    "nested": false,
    "propertyPath": [
      "cd",
    ],
    "type": "TEXT",
  },
  {
    "name": "cb",
    "nested": false,
    "propertyPath": [
      "cb",
    ],
    "type": "FLOAT",
  },
  {
    "name": "cc",
    "nested": false,
    "propertyPath": [
      "cc",
    ],
    "type": "BOOLEAN",
  },
  {
    "name": "ca",
    "nested": false,
    "propertyPath": [
      "ca",
    ],
    "type": "INTEGER",
  },
  {
    "name": "n/nc/nc2",
    "nested": true,
    "propertyPath": [
      "n",
      "nc",
      "nc2",
    ],
    "type": "BOOLEAN",
  },
  {
    "name": "n/nc/nc1",
    "nested": true,
    "propertyPath": [
      "n",
      "nc",
      "nc1",
    ],
    "type": "INTEGER",
  },
  {
    "name": "n/nb",
    "nested": true,
    "propertyPath": [
      "n",
      "nb",
    ],
    "type": "INTEGER",
  },
  {
    "name": "n/na",
    "nested": true,
    "propertyPath": [
      "n",
      "na",
    ],
    "type": "TEXT",
  },
]
`;

exports[`BaseDataAdapter > inferSqlTypeFromItems > inferSqlTypeFromItems work correctly for dialect=postgres 1`] = `
[
  {
    "name": "cd",
    "nested": false,
    "propertyPath": [
      "cd",
    ],
    "type": "TEXT",
  },
  {
    "name": "cb",
    "nested": false,
    "propertyPath": [
      "cb",
    ],
    "type": "FLOAT",
  },
  {
    "name": "cc",
    "nested": false,
    "propertyPath": [
      "cc",
    ],
    "type": "BOOLEAN",
  },
  {
    "name": "ca",
    "nested": false,
    "propertyPath": [
      "ca",
    ],
    "type": "INTEGER",
  },
  {
    "name": "n/nc/nc2",
    "nested": true,
    "propertyPath": [
      "n",
      "nc",
      "nc2",
    ],
    "type": "BOOLEAN",
  },
  {
    "name": "n/nc/nc1",
    "nested": true,
    "propertyPath": [
      "n",
      "nc",
      "nc1",
    ],
    "type": "INTEGER",
  },
  {
    "name": "n/nb",
    "nested": true,
    "propertyPath": [
      "n",
      "nb",
    ],
    "type": "INTEGER",
  },
  {
    "name": "n/na",
    "nested": true,
    "propertyPath": [
      "n",
      "na",
    ],
    "type": "TEXT",
  },
]
`;

exports[`BaseDataAdapter > inferSqlTypeFromItems > inferSqlTypeFromItems work correctly for dialect=redis 1`] = `
[
  {
    "name": "cd",
    "nested": false,
    "propertyPath": [
      "cd",
    ],
    "type": "string",
  },
  {
    "name": "cb",
    "nested": false,
    "propertyPath": [
      "cb",
    ],
    "type": "float",
  },
  {
    "name": "cc",
    "nested": false,
    "propertyPath": [
      "cc",
    ],
    "type": "boolean",
  },
  {
    "name": "ca",
    "nested": false,
    "propertyPath": [
      "ca",
    ],
    "type": "integer",
  },
  {
    "name": "n/nc/nc2",
    "nested": true,
    "propertyPath": [
      "n",
      "nc",
      "nc2",
    ],
    "type": "boolean",
  },
  {
    "name": "n/nc/nc1",
    "nested": true,
    "propertyPath": [
      "n",
      "nc",
      "nc1",
    ],
    "type": "integer",
  },
  {
    "name": "n/nb",
    "nested": true,
    "propertyPath": [
      "n",
      "nb",
    ],
    "type": "integer",
  },
  {
    "name": "n/na",
    "nested": true,
    "propertyPath": [
      "n",
      "na",
    ],
    "type": "string",
  },
]
`;

exports[`BaseDataAdapter > inferSqlTypeFromItems > inferSqlTypeFromItems work correctly for dialect=sqlite 1`] = `
[
  {
    "name": "cd",
    "nested": false,
    "propertyPath": [
      "cd",
    ],
    "type": "TEXT",
  },
  {
    "name": "cb",
    "nested": false,
    "propertyPath": [
      "cb",
    ],
    "type": "FLOAT",
  },
  {
    "name": "cc",
    "nested": false,
    "propertyPath": [
      "cc",
    ],
    "type": "BOOLEAN",
  },
  {
    "name": "ca",
    "nested": false,
    "propertyPath": [
      "ca",
    ],
    "type": "INTEGER",
  },
  {
    "name": "n/nc/nc2",
    "nested": true,
    "propertyPath": [
      "n",
      "nc",
      "nc2",
    ],
    "type": "BOOLEAN",
  },
  {
    "name": "n/nc/nc1",
    "nested": true,
    "propertyPath": [
      "n",
      "nc",
      "nc1",
    ],
    "type": "INTEGER",
  },
  {
    "name": "n/nb",
    "nested": true,
    "propertyPath": [
      "n",
      "nb",
    ],
    "type": "INTEGER",
  },
  {
    "name": "n/na",
    "nested": true,
    "propertyPath": [
      "n",
      "na",
    ],
    "type": "TEXT",
  },
]
`;
